--- a/SentimentClassification.ipynb
+++ b/SentimentClassification.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "GOAL: Train a sentiment classifier (Positive, Negative, Neutral) on a corpus of the provided documents. Your goal is to\n",
     "    maximize accuracy. There is special interest in being able to accurately detect negative sentiment. The training data \n",
-    "    includes documents from a wide variety of sources, not merely social media, and some of it may be inconsistently labeled. Please describe the business outcomes in your work sample including how data limitations impact your results and how these limitations could be addressed in a larger project.\n",
+    "    includes documents from a wide variety of sources, not merely social media, and some of it may be inconsistently labeled.\n",
     "\n"
    ]
   },
